# ComputerEnhance_8086sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
8086sim/sauce/: common.h  decoder.c  decoder.h  decoder2.c  decoder2.h  instruction_layouts.inl  main.c  simulator.c  simulator.h  utils.c  utils.h
